fixed z-index issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -17,3 +17,7 @@ body {
     max-height: 400px;
     overflow-y: auto;
 }
+
+#navbar {
+    z-index: 9999;
+}
